Custom 'round' function

--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
 
   <!-- Uncomment this line to use the minified source version -->
   <!-- This is the production version -->
-  <!-- <script src="dist/player.min.js"></script> -->
+  <script src="dist/player.min.js"></script>
 
   <!-- Uncomment this line to use the unminified source version -->
   <!-- This is easier for debugging -->
-  <script src="src/player.js"></script>
+  <!-- <script src="src/player.js"></script> -->
 
   <script src="examples/tunes1.js"></script>
   <script src="examples/tunes2.js"></script>
