Remove 'convert' step

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>Features</h2>
     <ul>
       <li>Play PICO-8 sound effects and music</li>
-      <li>Player JavaScript a mere 1.5k (1k gzipped)</li>
+      <li>Player JavaScript a tiny 1740 bytes (1134 bytes zipped)</li>
     </ul>
     <h2>Instructions</h2>
     <p>1. Grab the source here:</p>
@@ -82,21 +82,30 @@
       <li>Original: <a href="#">...</a></li>
       <li>Minified: <a href="#">...</a></li>
     </ul>
-    <p>2. Extract music and sound from a PICO-8 cartridge in .p8 format:</p>
+    <p>2. Extract music and sound from a PICO-8 cartridge in .p8 format.</p>
     <blockquote>
-      <pre>$ node src/convert.js carts/tunes1.p8 > examples/tunes3.js</pre>
+      <p>Open the .p8 file in a text editor.</p>
+      <p>Find the <code>__sfx__</code> and <code>__music__</code> sections.</p>
+      <p>Create string variables in your code with the respective contents.</p>
+      <p>For example:</p>
+      <pre>const __sfx__ = `...`;</pre>
+      <pre>const __music__ = `...`;</pre>
+      <p>See <a href="examples/tunes1.js">tunes1.js</a> for a full example.</p>
     </blockquote>
-    <p>3. Include the output in your project (using HTML <code>&lt;source&gt;</code>, webpack, etc)</p>
-    <p>4. Include the player in your project</p>
-    <p>5. Play sound:</p>
+    <p>3. Include the player in your project (using HTML <code>&lt;source&gt;</code>, webpack, etc)</p>
+    <p>4. Play sound:</p>
     <blockquote>
-      <pre>pico8.sfx(myCartridge, mySfxId);</pre>
+      <pre>pico8.sfx(mySfxId);</pre>
     </blockquote>
-    <p>6. Play music:</p>
+    <p>5. Play music:</p>
     <blockquote>
-      <pre>pico8.music(myCartridge, mySongId);</pre>
+      <pre>pico8.music(mySongId);</pre>
     </blockquote>
     <h2>Examples</h2>
+    <p>
+      Demo songs from <a href="https://www.lexaloffle.com/bbs/?tid=29008">Pico-8 Tunes Volume 1</a>
+      by <a href="https://twitter.com/gruber_music">Gruber</a>.
+    </p>
     <table>
       <thead>
         <tr>
@@ -110,15 +119,12 @@
       </thead>
       <tbody>
         <tr>
-          <td colspan="6"><a href="https://www.lexaloffle.com/bbs/?tid=29008">Pico-8 Tunes Volume 1</a></td>
-        </tr>
-        <tr>
           <td>1. Demented Mario</td>
           <td>24.0</td>
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_1);">Play</button>
+            <button onclick="play(0);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -133,7 +139,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_2);">Play</button>
+            <button onclick="play(6);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -148,7 +154,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_3);">Play</button>
+            <button onclick="play(14);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -163,7 +169,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_4);">Play</button>
+            <button onclick="play(18);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -178,7 +184,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_5);">Play</button>
+            <button onclick="play(24);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -193,7 +199,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_6);">Play</button>
+            <button onclick="play(30);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -208,7 +214,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_7);">Play</button>
+            <button onclick="play(36);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -223,7 +229,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_8);">Play</button>
+            <button onclick="play(42);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -238,7 +244,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_9);">Play</button>
+            <button onclick="play(46);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -253,7 +259,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_10);">Play</button>
+            <button onclick="play(48);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -268,7 +274,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_11);">Play</button>
+            <button onclick="play(55);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -283,7 +289,7 @@
           <td></td>
           <td></td>
           <td>
-            <button onclick="play(tunes1_12);">Play</button>
+            <button onclick="play(59);">Play</button>
             <button onclick="stop();">Stop</button>
           </td>
           <td>
@@ -292,164 +298,11 @@
             </audio>
           </td>
         </tr>
-        <tr>
-          <td colspan="6"><a href="https://www.lexaloffle.com/bbs/?pid=62911">Pico-8 Tunes Volume 2</a></td>
-        </tr>
-        <tr>
-          <td>1. Into the Belt</td>
-          <td>26.1</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_2);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_into_the_belt.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td class="bad">2. Need for Speed</td>
-          <td>28.8</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_10);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_need_for_speed.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td>3. Like Clockwork</td>
-          <td>12.8</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_4);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_like_clockwork.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td>4. Morning Shower</td>
-          <td>32.0</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_1);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_morning_shower.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td>5. Robot Dance</td>
-          <td>36.3</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_5);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_robot_dance.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td class="bad">6. Eyes in the Dark</td>
-          <td>51.2</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_8);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_eyes_in_the_dark.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td>7. Flight of Icarus</td>
-          <td>17.6</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_9);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_flight_of_icarus.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td class="bad">8. Fickle Flame</td>
-          <td>21.3</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_7);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_fickle_flame.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td class="bad">9. Autumn Wind</td>
-          <td>32.0</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_6);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_autumn_wind.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
-        <tr>
-          <td>10. Dimensional Gate</td>
-          <td>27.7</td>
-          <td></td>
-          <td></td>
-          <td>
-            <button onclick="play(tunes2_3);">Play</button>
-            <button onclick="stop();">Stop</button>
-          </td>
-          <td>
-            <audio controls preload="none">
-              <source src="originals/tunes2_dimensional_gate.mp3" type="audio/mp3">
-            </audio>
-          </td>
-        </tr>
       </tbody>
     </table>
     <h2>Known issues</h2>
     <ul>
-      <li>"Instrument editor" (custom instruments) not implemented. All songs in <span class="bad">red</span> are totally broken.
+      <li>"Instrument editor" (custom instruments) not implemented. (Introduced in 0.1.11, see <a href="https://twitter.com/lexaloffle/status/914533528091508736?s=20">tweet</a>)
       </li>
       <li>Arpeggio not implemented.</li>
       <li>Smooth transitions across instruments (When instrument changes, an attack/release envelope is applied. Some
@@ -485,15 +338,14 @@
 
   <!-- Uncomment this line to use the minified source version -->
   <!-- This is the production version -->
-  <script src="dist/player.min.js"></script>
+  <!-- <script src="dist/player.min.js"></script> -->
 
   <!-- Uncomment this line to use the unminified source version -->
   <!-- This is easier for debugging -->
-  <!-- <script src="src/player.js"></script> -->
+  <script src="src/player.js"></script>
 
   <script src="examples/tunes1.js"></script>
-  <script src="examples/tunes2.js"></script>
-  <script src="examples/example.js"></script>
+  <script src="examples/demo.js"></script>
 </body>
 
 </html>
